force-app/main/default/objects/BGBL__Letter_Single__c/BGBL__Letter_Single__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings needed for Single and Batch Letters</description>
    <label>BG Letter Engine settings</label>
</CustomObject>