force-app/main/default/objects/BGBL__Letter_Single__c/fields/BGBL__Batch_Letter_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Batch_Letter_Chunk_Size__c</fullName>
    <defaultValue>5000</defaultValue>
    <description>Job will return with error if enter > 5,000</description>
    <inlineHelpText>If blank, batch letter job chunk size is limited to 5,000. Enter any number only up to 5,000.</inlineHelpText>
    <label>Batch Letter Chunk Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>