force-app/main/default/objects/BGBL__Letter_Single__c/fields/BGBL__Letter_Request_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Letter_Request_Endpoint__c</fullName>
    <defaultValue>"https://lettersingle.mybasicgov.com/RunBatchMergeJob/SingleLetter.aspx"</defaultValue>
    <description>Setting will overwrite default production single letter request endpoint to any url or ip of Admin's choosing (for testing and migration purposes).</description>
    <inlineHelpText>Setting will overwrite default production single letter request endpoint to any url or ip of Admin's choosing (for testing and migration purposes).</inlineHelpText>
    <label>Single Manual Letter Request Endpoint</label>
    <type>Url</type>
</CustomField>