force-app/main/default/objects/BGBL__Letter_Single__c/fields/BGBL__Request_Objects_Additional__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Request_Objects_Additional__c</fullName>
    <description>only needed when Attach Letter button refers to the letterAttach scontrol (as opposed to the LetterRequest VF page)</description>
    <inlineHelpText>when including Attach Letter button to an object, add object API name to this list. comma-delimited. no spaces. do not include Permit2, License2, Application2. The shorter this list, the quicker the page loads.</inlineHelpText>
    <label>Single Man. Reqst Objects - Additional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>